# zenvecha

./: .codespellrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  RULES.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  build.rs  deny.toml  trademark.md
.github/workflows/: ci.yml  maintenance-deps-weekly.yml  release.yml
docs/: DESIGN.md  ROADMAP.md  RULES.md  VERIFY_RELEASE.md  architecture.md  limitations.md  roadmap.md  testing-vm.md  threat-model.md
docs/adr/: 0001-language.md  0001-project-goals.md  0002-patch-engine.md  0003-symbol-resolution.md
kernel/: Cargo.toml  Makefile  capability.c  dummy_target.c  guard.c  livepatch.c  zenvecha.h  zenvecha_module.c  zenvecha_module.rs
kernel/capability/: mod.rs  types.rs
kernel/livepatch/: dummy_target.rs  executor.rs  guard.rs  mod.rs
kernel/probes/: arch.c  btf.c  kallsyms.c  memory.c  modules.c  scheduler.c  security.c  symbols.c  tracepoints.c  tracing.c  version.c
kernel/src/: lib.rs
scripts/: build.sh  install.sh  quick-test.sh  safe_e2e_test.sh  uninstall.sh  version-to.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: abi.rs  analyze.rs  doctor.rs  inspect.rs  mod.rs  patch.rs  report.rs
src/core/: analysis.rs  capability.rs  caps.rs  evidence.rs  evidence_helpers.rs  mod.rs  pipeline.rs  recommendation.rs  rendering.rs
src/system/: abi.rs  btf.rs  buildenv.rs  capabilities.rs  compiler.rs  config.rs  formatter.rs  fscheck.rs  json.rs  kallsyms.rs  kernel.rs  mod.rs  moduleinfo.rs  modules.rs  recommend.rs  report.rs  rust.rs  (+3 more)
tests/: integration.rs
userspace/: Cargo.toml
(+58 files in other folders)
